# git_manager

./: Cargo.toml
src/: gitrepo.rs  lib.rs  main.rs  states.rs  utils.rs
src/components/: input.rs  mod.rs  popup.rs  reposhow.rs  statusbar.rs
src/example/: async.rs  libgit2.rs  table.rs  test.rs
