[package]
name = "git_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
git2 = "0.18.1"
ratatui = "0.24.0"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
  name = "git-manager"
  path = "./src/main.rs"
